<resources>
    <!-- General -->
    <string name="app_name">Agile</string>

    <!-- Página principal -->
    <string name="login">Log-in</string>
    <string name="signup">Sign-up</string>
    <string name="nombre">Nombre</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar">Registrar</string>
    <string name="bt_back_desc">Volver a la pantalla de inicio</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_primary">PrimaryActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Navegation description -->
    <string name="nav_desc_products">Botón navegación productos</string>
    <string name="nav_desc_sales">Botón navegación ventas</string>
    <string name="nav_desc_settings">Botón navegación ajustes</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>