<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize">

    <!--<com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:itemIconTint="@color/text"
        app:itemTextColor="@color/text"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />-->

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment_activity_primary"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/nav"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/mobile_navigation" />

    <!-- Bottom navigation -->
    <LinearLayout
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:paddingVertical="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageButton
            android:id="@+id/nav_products"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            android:background="@drawable/bt_nav_bg"
            android:contentDescription="@string/nav_desc_products"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:layout_marginEnd="60dp"
            app:srcCompat="@drawable/ic_products"
            app:tint="@color/bt_nav_txt" />

        <ImageButton
            android:id="@+id/nav_sales"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            android:background="@drawable/bt_nav_bg"
            android:contentDescription="@string/nav_desc_sales"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:layout_marginEnd="60dp"
            app:srcCompat="@drawable/ic_sales"
            app:tint="@color/bt_nav_txt" />

        <ImageButton
            android:id="@+id/nav_settings"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            android:background="@drawable/bt_nav_bg"
            android:contentDescription="@string/nav_desc_settings"
            android:padding="10dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_settings"
            app:tint="@color/bt_nav_txt" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>